# ecs-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/Assets/: kloppenheim_06_4k.hdr  source_for_the_hdr_texture.txt
Engine/Core/: Application.h  BaseScript.h  MatrixCalculations.h  ScriptingCore.cpp  ScriptingCore.h  main.cpp
Engine/ECS/: Component.h  Entity.h  EntityManager.h  EntityTypeStorage.h  System.h  SystemsManager.cpp  SystemsManager.h
Engine/ECS/Components/: BoxColliderComponent.h  MovementComponent.h  RigidbodyComponent.h  TransformComponent.h
Engine/ECS/Entities/: RigidbodyEntity.h
Engine/ECS/Systems/: PhysicsSystem.cpp  PhysicsSystem.h
Engine/Interface/: IECS.cpp  IECS.h  WindowManager.cpp  WindowManager.h
Engine/OpenGL/: Shader.cpp  Shader.h
Engine/OpenGL/ECS/Components/: CameraComponent.h  MaterialComponent.h  MeshComponent.h
Engine/OpenGL/ECS/Entities/: CameraEntity.h
Engine/OpenGL/ECS/Systems/: CameraControllerSystem.cpp  CameraControllerSystem.h  MeshLoaderSystem.cpp  MeshLoaderSystem.h  RenderSystem.cpp  RenderSystem.h  ShaderLoaderSystem.cpp  ShaderLoaderSystem.h  TextureLoaderSystem .cpp  TextureLoaderSystem.h
Engine/OpenGL/Shaders/: BRDF.frag  BRDF.vert  Background.frag  Background.vert  Cubemap.vert  Equirectangular_to_cubemap.frag  Irradiance_convolution.frag  PBR-Parallax.frag  PBR.frag  PBR.vert  PBR_Instanced.vert  Prefilter.frag  Unlit.frag  Unlit.vert
Game/Components/: AStarComponent.h  CarryComponent.h  GameStatComponent.h  PlayerComponent.h  TriggerComponent.h
Game/Entities/: AttackerEntity.h  CollectorEntity.h  CollisionParticleEntity.h  DynamicSceneEntity.h  GoldEntity.h  MovingTriggerEntity.h  StaticSceneEntity.h  TowerEntity.h
Game/Scripts/: AICourse.cpp  AICourse.h  AICourseGameManager.cpp  AICourseGameManager.h  Astar.h  CollectingGame.cpp  CollectingGame.h  PhysicsTestScript.cpp  PhysicsTestScript.h  TestScript.cpp  TestScript.h
Game/Systems/: AttackerAgentSystem.cpp  AttackerAgentSystem.h  CollectorAgentSystem.h  EntityRotateSystem.h  TriggerSystem.h
